<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Chat App</string>
    <string name="forget_password">Forget Password ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="type_a_message">Type a message</string>
    <string name="submit">SUBMIT</string>
    <!--    <string name="e_mail">E-mail</string>-->
    <string name="enteremail">enter Email</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="update_email">Update email</string>
    <string name="name">Name</string>
    <string name="password" translatable="false">Password</string>
    <string name="e_mail" translatable="false">Email</string>
    <string name="update_name">Update name</string>

    <string name="save">Save</string>
    <string name="MsgLog">Do you want to Log out</string>
    <string name="titleLogOut">Chat App</string>
    <string name="DeleteDi">Delete</string>
    <string name="MsgDelete">Do you want to Delete?</string>
    <string name="YesDel">yes</string>
    <string name="NoDel">no</string>
    <string name="LogYes">yes</string>
    <string name="Nolog">no</string>
    <string name="ForgetToast">Please enter email.</string>
    <string name="EmailSent">\"Email sent successfully to reset your password \"</string>
    <string name="LoginToast">User does not exist</string>
    <string name="SignUpToast">Error try again</string>
    <string name="bluetoothEnable">bluetooth Enable</string>
    <string name="bluethoothDis">bluetooth disable</string>
    <string name="searchToast">no result</string>
    <string name="OnBlue">OnBlue</string>
    <string name="offBlue">Off</string>
</resources>