<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back6"


    tools:context=".home">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="238dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:text="@string/forget_password"
        android:textColor="#D82F2F"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/til_forget_email"
        android:layout_width="265dp"
        android:layout_height="53dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="#0C0C0C"
        android:textColorHint="#6b6961"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/Btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Btn_submit"
        android:layout_width="240dp"
        android:layout_height="63dp"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="288dp"
        android:background="@drawable/sub"
        android:backgroundTint="#BEE8D5"
        android:text="@string/submit"
        android:textColor="#070707"
        android:textSize="22dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>









