<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/back888">

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="305dp"
        android:layout_height="95dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/edt_background"
        android:backgroundTint="#C3E3BE"
        android:hint="@string/email"
        android:paddingLeft="13dp"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="304dp"
        android:layout_height="91dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/edt_background"
        android:backgroundTint="#E2EFEA"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="13dp"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="211dp"
        android:layout_height="62dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/btn_background"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="209dp"
        android:layout_height="59dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="204dp"
        android:background="@drawable/btn_background"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ForgetPass"
        android:layout_width="227dp"
        android:layout_height="29dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="35dp"
        android:text="@string/forget_password"
        android:textColor="#000000"
        android:textSize="19dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageChat"
        android:layout_width="183dp"
        android:layout_height="195dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toEndOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/back044" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="124dp"
        android:layout_height="125dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="218dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back055" />


</androidx.constraintlayout.widget.ConstraintLayout>


